--- a/py12.ipynb
+++ b/py12.ipynb
@@ -2,6 +2,374 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score\n",
+    "import matplotlib.pyplot as plt \n",
+    "%matplotlib inline \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_fifa_api_id</th>\n",
+       "      <th>player_api_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>overall_rating</th>\n",
+       "      <th>potential</th>\n",
+       "      <th>preferred_foot</th>\n",
+       "      <th>attacking_work_rate</th>\n",
+       "      <th>defensive_work_rate</th>\n",
+       "      <th>crossing</th>\n",
+       "      <th>finishing</th>\n",
+       "      <th>...</th>\n",
+       "      <th>vision</th>\n",
+       "      <th>penalties</th>\n",
+       "      <th>marking</th>\n",
+       "      <th>standing_tackle</th>\n",
+       "      <th>sliding_tackle</th>\n",
+       "      <th>gk_diving</th>\n",
+       "      <th>gk_handling</th>\n",
+       "      <th>gk_kicking</th>\n",
+       "      <th>gk_positioning</th>\n",
+       "      <th>gk_reflexes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>218353</td>\n",
+       "      <td>505942</td>\n",
+       "      <td>2016-02-18 00:00:00</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>right</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>218353</td>\n",
+       "      <td>505942</td>\n",
+       "      <td>2015-11-19 00:00:00</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>right</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>218353</td>\n",
+       "      <td>505942</td>\n",
+       "      <td>2015-09-21 00:00:00</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>right</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>218353</td>\n",
+       "      <td>505942</td>\n",
+       "      <td>2015-03-20 00:00:00</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>right</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>218353</td>\n",
+       "      <td>505942</td>\n",
+       "      <td>2007-02-22 00:00:00</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>right</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    player_fifa_api_id  player_api_id                 date  overall_rating  \\\n",
+       "id                                                                           \n",
+       "1               218353         505942  2016-02-18 00:00:00            67.0   \n",
+       "2               218353         505942  2015-11-19 00:00:00            67.0   \n",
+       "3               218353         505942  2015-09-21 00:00:00            62.0   \n",
+       "4               218353         505942  2015-03-20 00:00:00            61.0   \n",
+       "5               218353         505942  2007-02-22 00:00:00            61.0   \n",
+       "\n",
+       "    potential preferred_foot attacking_work_rate defensive_work_rate  \\\n",
+       "id                                                                     \n",
+       "1        71.0          right              medium              medium   \n",
+       "2        71.0          right              medium              medium   \n",
+       "3        66.0          right              medium              medium   \n",
+       "4        65.0          right              medium              medium   \n",
+       "5        65.0          right              medium              medium   \n",
+       "\n",
+       "    crossing  finishing  ...  vision  penalties  marking  standing_tackle  \\\n",
+       "id                       ...                                                \n",
+       "1       49.0       44.0  ...    54.0       48.0     65.0             69.0   \n",
+       "2       49.0       44.0  ...    54.0       48.0     65.0             69.0   \n",
+       "3       49.0       44.0  ...    54.0       48.0     65.0             66.0   \n",
+       "4       48.0       43.0  ...    53.0       47.0     62.0             63.0   \n",
+       "5       48.0       43.0  ...    53.0       47.0     62.0             63.0   \n",
+       "\n",
+       "    sliding_tackle  gk_diving  gk_handling  gk_kicking  gk_positioning  \\\n",
+       "id                                                                       \n",
+       "1             69.0        6.0         11.0        10.0             8.0   \n",
+       "2             69.0        6.0         11.0        10.0             8.0   \n",
+       "3             69.0        6.0         11.0        10.0             8.0   \n",
+       "4             66.0        5.0         10.0         9.0             7.0   \n",
+       "5             66.0        5.0         10.0         9.0             7.0   \n",
+       "\n",
+       "    gk_reflexes  \n",
+       "id               \n",
+       "1           8.0  \n",
+       "2           8.0  \n",
+       "3           8.0  \n",
+       "4           7.0  \n",
+       "5           7.0  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=pd.read_parquet('files/soccer.parquet')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "183978"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(183978, 41)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "player_fifa_api_id       int64\n",
+       "player_api_id            int64\n",
+       "date                    object\n",
+       "overall_rating         float64\n",
+       "potential              float64\n",
+       "preferred_foot          object\n",
+       "attacking_work_rate     object\n",
+       "defensive_work_rate     object\n",
+       "crossing               float64\n",
+       "finishing              float64\n",
+       "heading_accuracy       float64\n",
+       "short_passing          float64\n",
+       "volleys                float64\n",
+       "dribbling              float64\n",
+       "curve                  float64\n",
+       "free_kick_accuracy     float64\n",
+       "long_passing           float64\n",
+       "ball_control           float64\n",
+       "acceleration           float64\n",
+       "sprint_speed           float64\n",
+       "agility                float64\n",
+       "reactions              float64\n",
+       "balance                float64\n",
+       "shot_power             float64\n",
+       "jumping                float64\n",
+       "stamina                float64\n",
+       "strength               float64\n",
+       "long_shots             float64\n",
+       "aggression             float64\n",
+       "interceptions          float64\n",
+       "positioning            float64\n",
+       "vision                 float64\n",
+       "penalties              float64\n",
+       "marking                float64\n",
+       "standing_tackle        float64\n",
+       "sliding_tackle         float64\n",
+       "gk_diving              float64\n",
+       "gk_handling            float64\n",
+       "gk_kicking             float64\n",
+       "gk_positioning         float64\n",
+       "gk_reflexes            float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +383,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   },
   "orig_nbformat": 4,
