--- a/py12.ipynb
+++ b/py12.ipynb
@@ -459,10 +459,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "overall_rating        1.000000\n",
+       "reactions             0.771856\n",
+       "potential             0.765435\n",
+       "short_passing         0.458243\n",
+       "ball_control          0.443991\n",
+       "long_passing          0.434525\n",
+       "vision                0.431493\n",
+       "shot_power            0.428053\n",
+       "penalties             0.392715\n",
+       "long_shots            0.392668\n",
+       "positioning           0.368978\n",
+       "volleys               0.361739\n",
+       "curve                 0.357566\n",
+       "crossing              0.357320\n",
+       "dribbling             0.354191\n",
+       "free_kick_accuracy    0.349800\n",
+       "finishing             0.330079\n",
+       "stamina               0.325606\n",
+       "aggression            0.322782\n",
+       "strength              0.315684\n",
+       "heading_accuracy      0.313324\n",
+       "jumping               0.258978\n",
+       "sprint_speed          0.253048\n",
+       "interceptions         0.249094\n",
+       "acceleration          0.243998\n",
+       "agility               0.239963\n",
+       "standing_tackle       0.163986\n",
+       "balance               0.160211\n",
+       "marking               0.132185\n",
+       "sliding_tackle        0.128054\n",
+       "gk_kicking            0.028799\n",
+       "gk_diving             0.027675\n",
+       "gk_positioning        0.008029\n",
+       "gk_reflexes           0.007804\n",
+       "gk_handling           0.006717\n",
+       "player_fifa_api_id   -0.278703\n",
+       "player_api_id        -0.328315\n",
+       "Name: overall_rating, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.corr()['overall_rating'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data=data.select_dtypes(include='number')\n",
+    "x=data.drop(['overall_rating','potential'],axis=1)\n",
+    "y=data['overall_rating']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test=train_test_split(x,y,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin=LinearRegression()\n",
+    "lin.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=lin.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7883915544905804"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_test,y_pred)"
+   ]
   }
  ],
  "metadata": {
