--- a/py13.ipynb
+++ b/py13.ipynb
@@ -502,6 +502,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1460, 80)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=data.select_dtypes(include='number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1460 entries, 1 to 1460\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   MSSubClass     1460 non-null   int64  \n",
+      " 1   LotFrontage    1201 non-null   float64\n",
+      " 2   LotArea        1460 non-null   int64  \n",
+      " 3   OverallQual    1460 non-null   int64  \n",
+      " 4   OverallCond    1460 non-null   int64  \n",
+      " 5   YearBuilt      1460 non-null   int64  \n",
+      " 6   YearRemodAdd   1460 non-null   int64  \n",
+      " 7   MasVnrArea     1452 non-null   float64\n",
+      " 8   BsmtFinSF1     1460 non-null   int64  \n",
+      " 9   BsmtFinSF2     1460 non-null   int64  \n",
+      " 10  BsmtUnfSF      1460 non-null   int64  \n",
+      " 11  TotalBsmtSF    1460 non-null   int64  \n",
+      " 12  1stFlrSF       1460 non-null   int64  \n",
+      " 13  2ndFlrSF       1460 non-null   int64  \n",
+      " 14  LowQualFinSF   1460 non-null   int64  \n",
+      " 15  GrLivArea      1460 non-null   int64  \n",
+      " 16  BsmtFullBath   1460 non-null   int64  \n",
+      " 17  BsmtHalfBath   1460 non-null   int64  \n",
+      " 18  FullBath       1460 non-null   int64  \n",
+      " 19  HalfBath       1460 non-null   int64  \n",
+      " 20  BedroomAbvGr   1460 non-null   int64  \n",
+      " 21  KitchenAbvGr   1460 non-null   int64  \n",
+      " 22  TotRmsAbvGrd   1460 non-null   int64  \n",
+      " 23  Fireplaces     1460 non-null   int64  \n",
+      " 24  GarageYrBlt    1379 non-null   float64\n",
+      " 25  GarageCars     1460 non-null   int64  \n",
+      " 26  GarageArea     1460 non-null   int64  \n",
+      " 27  WoodDeckSF     1460 non-null   int64  \n",
+      " 28  OpenPorchSF    1460 non-null   int64  \n",
+      " 29  EnclosedPorch  1460 non-null   int64  \n",
+      " 30  3SsnPorch      1460 non-null   int64  \n",
+      " 31  ScreenPorch    1460 non-null   int64  \n",
+      " 32  PoolArea       1460 non-null   int64  \n",
+      " 33  MiscVal        1460 non-null   int64  \n",
+      " 34  MoSold         1460 non-null   int64  \n",
+      " 35  YrSold         1460 non-null   int64  \n",
+      " 36  SalePrice      1460 non-null   int64  \n",
+      "dtypes: float64(3), int64(34)\n",
+      "memory usage: 433.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SalePrice        1.000000\n",
+       "OverallQual      0.790982\n",
+       "GrLivArea        0.708624\n",
+       "GarageCars       0.640409\n",
+       "GarageArea       0.623431\n",
+       "TotalBsmtSF      0.613581\n",
+       "1stFlrSF         0.605852\n",
+       "FullBath         0.560664\n",
+       "TotRmsAbvGrd     0.533723\n",
+       "YearBuilt        0.522897\n",
+       "YearRemodAdd     0.507101\n",
+       "GarageYrBlt      0.486362\n",
+       "MasVnrArea       0.477493\n",
+       "Fireplaces       0.466929\n",
+       "BsmtFinSF1       0.386420\n",
+       "LotFrontage      0.351799\n",
+       "WoodDeckSF       0.324413\n",
+       "2ndFlrSF         0.319334\n",
+       "OpenPorchSF      0.315856\n",
+       "HalfBath         0.284108\n",
+       "LotArea          0.263843\n",
+       "BsmtFullBath     0.227122\n",
+       "BsmtUnfSF        0.214479\n",
+       "BedroomAbvGr     0.168213\n",
+       "ScreenPorch      0.111447\n",
+       "PoolArea         0.092404\n",
+       "MoSold           0.046432\n",
+       "3SsnPorch        0.044584\n",
+       "BsmtFinSF2      -0.011378\n",
+       "BsmtHalfBath    -0.016844\n",
+       "MiscVal         -0.021190\n",
+       "LowQualFinSF    -0.025606\n",
+       "YrSold          -0.028923\n",
+       "OverallCond     -0.077856\n",
+       "MSSubClass      -0.084284\n",
+       "EnclosedPorch   -0.128578\n",
+       "KitchenAbvGr    -0.135907\n",
+       "Name: SalePrice, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.corr()['SalePrice'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
