--- a/py13.ipynb
+++ b/py13.ipynb
@@ -648,23 +648,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4184998538.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [14]\u001b[1;36m\u001b[0m\n\u001b[1;33m    //x=independent y=dependent\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# x=independent y=dependent\n",
     "def regression_score(X,y):\n",
-    "    X_train,X_test,y_train,y_test="
+    "    X_train,X_test,y_train,y_test=train_test_split(X,y,test_Size=0.2,random_state=42)\n",
+    "    lin=LinearRegression()\n",
+    "    lin.fit(X_train,y_train)\n",
+    "    y_pred=lin.predict(X_test)\n",
+    "    return r2_score(y_pred,y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
