--- a/py13.ipynb
+++ b/py13.ipynb
@@ -648,17 +648,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# x=independent y=dependent\n",
     "def regression_score(X,y):\n",
-    "    X_train,X_test,y_train,y_test=train_test_split(X,y,test_Size=0.2,random_state=42)\n",
+    "    X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=42)\n",
     "    lin=LinearRegression()\n",
     "    lin.fit(X_train,y_train)\n",
     "    y_pred=lin.predict(X_test)\n",
     "    return r2_score(y_pred,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.654828906832541"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_base=data.dropna()\n",
+    "regression_score(test_base.drop('SalePrice',axis=1),test_base[['SalePrice']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7439346373898226"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_base=data.fillna(data.mean())\n",
+    "regression_score(test_base.drop('SalePrice',axis=1),test_base[['SalePrice']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7465420669734295"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_base=data.fillna(data.mode().iloc[0])\n",
+    "regression_score(test_base.drop('SalePrice',axis=1),test_base[['SalePrice']])"
    ]
   },
   {
