--- a/py13.ipynb
+++ b/py13.ipynb
@@ -1418,6 +1418,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.DataFrame({'a':[1,2,3,2],'b':[11,2,21,2],'c':[21,2,31,2]})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
